<?xml version="1.0"?>
<package format="2">
  <name>clt_msgs</name>
  <version>0.1.0</version>
  <description>
      This package contains message definitions for Cooperative Localization and Tracking Methods in ROS
  </description>
  <author email="guilherme.lawless@tecnico.ulisboa.pt">Guilherme Lawless</author>
  <maintainer email="guilherme.lawless@tecnico.ulisboa.pt">Guilherme Lawless</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
</package>
